# old-librg-example

./: .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  project.4coder  server-test.rar
client/: client.cpp  main.cpp
server/: main.cpp  server.cpp
shared/: messages.h  types.h
